// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should be able to specify the size of text 1`] = `
"<p class=\\"custom-size \\">test-value</p><style>
        p {
          color: inherit;
        }
        
        .custom-size {
          font-size: 14px;
        }
      </style>"
`;

exports[`Text should be able to specify the size of text 2`] = `
"<p class=\\"custom-size \\">test-value</p><style>
        p {
          color: inherit;
        }
        
        .custom-size {
          font-size: 12rem;
        }
      </style>"
`;

exports[`Text should render P element in the default 1`] = `
"<p class=\\" \\">test-value</p><style>
        p {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style>"
`;

exports[`Text should render default color when type missing 1`] = `
"<p class=\\" \\">test-value</p><style>
        p {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style>"
`;

exports[`Text should work with different styles 1`] = `
"<div><p class=\\" \\">test-value</p><style>
        p {
          color: #666;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><p class=\\" \\">test-value</p><style>
        p {
          color: #0070f3;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><p class=\\" \\">test-value</p><style>
        p {
          color: #f5a623;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><p class=\\" \\">test-value</p><style>
        p {
          color: #ff0000;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style></div>"
`;

exports[`Text the combined style should be rendered 1`] = `
"<p class=\\" \\"><b class=\\" \\"><del class=\\" \\">test-value</del><style>
        del {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style></b><style>
        b {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style></p><style>
        p {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style>"
`;

exports[`Text the specified element should be rendered 1`] = `
"<div><h1 class=\\" \\">test-value</h1><style>
        h1 {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><h2 class=\\" \\">test-value</h2><style>
        h2 {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><h3 class=\\" \\">test-value</h3><style>
        h3 {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><h4 class=\\" \\">test-value</h4><style>
        h4 {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><h5 class=\\" \\">test-value</h5><style>
        h5 {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><h6 class=\\" \\">test-value</h6><style>
        h6 {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><p class=\\" \\">test-value</p><style>
        p {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><small class=\\" \\">test-value</small><style>
        small {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><span class=\\" \\">test-value</span><style>
        span {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><del class=\\" \\">test-value</del><style>
        del {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><i class=\\" \\">test-value</i><style>
        i {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><em class=\\" \\">test-value</em><style>
        em {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style><b class=\\" \\">test-value</b><style>
        b {
          color: inherit;
        }
        
        .custom-size {
          font-size: inherit;
        }
      </style></div>"
`;
